<resources>
    <string name="app_name">Parkforu</string>
    <string name="enter_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="forgot_pwd_lbl">Forgot Password?</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="login">Login</string>
    <string name="no_acnt">No account?</string>
    <string name="register">Register</string>
    <string name="back">back</string>
    <string name="edit_profile">edit_profile</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="make">Make</string>
    <string name="select_model">Select Model</string>
    <string name="color">Color</string>
    <string name="car_number_plate">Car Number Plate</string>
    <string name="update">Update</string>
    <string name="home">Home</string>
    <string name="booking_history">Order History</string>
    <string name="current_booking">Current Booking</string>
    <string name="order_discount">Order Discount</string>
    <string name="about_us">About Us</string>
    <string name="notification">Notification</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Do you want to logout?</string>
    <string name="drop_off">DROP OFF</string>
    <string name="pick_up">PICK UP</string>
    <string name="drop_date">Drop Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="drop_time">Drop Time</string>
    <string name="pick_time">Pick Time</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="action_settings">Settings</string>
    <string name="book_now">Book Now</string>
    <string name="select_make">Select Make</string>
    <string name="select_color">Select Color</string>
    <string name="select_reg">Select Registration</string>
    <string name="number_plate">Number Plate</string>
    <string name="next">Next</string>
    <string name="title_activity_order_details_screen">OrderDetailsScreen</string>
    <string name="num_of_order">Number of Orders</string>
    <string name="cost_of_reservation">Cost of Reservation</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="discount">Discount</string>
    <string name="oil_change">Oil Change</string>
    <string name="tax">Tax</string>
    <string name="total_cost">Total Cost</string>
    <string name="make_payment">Make Payment</string>
    <string name="order_details">Order Details</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="apply">Apply</string>
    <string name="enter_promocode"> Enter Promocode</string>
    <string name="title_activity_order_confirmation">OrderConfirmation</string>
    <string name="your_order_number">Your Order Number</string>
    <string name="order_confirm">Order Confirmation</string>
    <string name="ticket">Ticket</string>
    <string name="more">New</string>
    <string name="save">Save</string>
    <string name="make_year">Make Year</string>
    <string name="reservation_number">Reservation Number</string>
    <string name="service">Services</string>
    <string name="edit">Edit</string>
    <string name="slot_number">Slot number</string>
    <string name="creation_date">Creation date</string>
    <string name="order_number">Order number</string>
    <string name="screen1_title"> Double Save &amp; Up</string>
    <string name="screen1_desc">CAA Members earn 6\u0025 in CAA Dollars\u00AE plus Save 20\u0025  or more** off our regular rates throughout November.</string>
    <string name="screen2_title">Thinking of getting away?</string>
    <string name="screen2_desc">If the colder weather has already got you thinking of leaving town, start your trip at Park\u0027N Fly. </string>
    <string name="screen3_title">Why waste time parking?</string>
    <string name="screen3_desc">Park\u0027N Fly Valet is refined way to park when you travel. Just pull up, check in and go.Its that easy. Park\u0027N Fly Valet. We park. You fly.</string>
    <string name="screen4_title">Come Back to a \u0027New\u0027 Vehicle</string>
    <string name="screen4_desc">Pamper your car and geti an oil change while you\u0027re away. Services must be requested at time of check-in.</string>
    <string name="screen5_title">Earn free Parking</string>
    <string name="screen5_desc">Join the Park\u0027N Fly Rewards program and start earning free parking today!</string>
    <string name="explore">Explore</string>
    <string name="arrival">Arrival</string>
    <string name="flight_name">Flight Name</string>
    <string name="flight_number">Flight Number</string>
    <string name="arrival_datetime">Arrival Date and Time</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="departure">Departure</string>
    <string name="depart_datetime">Departure Date and Time</string>
    <string name="add_services">Add Services</string>
    <string name="flight_details">Flight Details</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">PayPal</string>
    <string name="select_payment">Select Payment</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="card_number_hint">****************</string>
    <string name="card_hint">- - - -</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_holder_name_hint">Enter CardHolder Name</string>
    <string name="cvv">CVV</string>
    <string name="expiry">Expiry Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="title_activity_services_screen">ServicesScreen</string>
    <string name="service_type">Service Type</string>
    <string name="service_cost">Service Cost</string>
    <string name="add_more_fields">Add more fields</string>
    <string name="place_order">Place Order</string>
    <string name="my_jobs">My Jobs</string>
    <string name="current_job">Current Job</string>
    <string name="accept_job">Accept Job</string>
    <string name="customer_details">Customer Details</string>
    <string name="make_model">Make Model</string>
    <string name="vehicle_num_plate">Vehicle Number Plate</string>
    <string name="start_job">Start Job</string>
    <string name="rt_door_front">Right Front Door</string>
    <string name="dented">Dented</string>
    <string name="clear">Clear</string>
    <string name="lt_door_front">Left Front Door</string>
    <string name="rt_door_back">Right Back Door</string>
    <string name="lt_door_back">Left Back Door</string>
    <string name="frnt_bmpr">Front Bumper</string>
    <string name="back_bmpr">Back Bumper</string>
    <string name="take_vehicle">Take Vehicle</string>
    <string name="vehicle_inspection">Vehicle Inspection</string>
    <string name="cust_comnts">Customer Comments</string>
    <string name="cust_signoff_param">Customer Signoff Parameters</string>
    <string name="done">Done</string>
    <string name="job_completed">Your Job has been completed</string>
    <string name="skip">Skip</string>
    <string name="add_more_services">Add more services</string>
    <string name="no_services">No Services</string>
    <string name="submit">Submit</string>
    <string name="add_service">Add Service</string>
    <string name="no_image_found">No Image Found</string>
    <string name="delete">Delete</string>
    <string name="network_slow_error">Slow internet connection</string>
    <string name="no_network">Please check your internet connection</string>
    <string name="network_error">Please check your internet connection</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_enter_pwd">Please Enter Password</string>
    <string name="signup">Signup</string>
    <string name="firstname">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="please_enter_firtsname">Please Enter First Name</string>
    <string name="please_enter_secondname">Please Enter Second Name</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="plate_number">Plate Number</string>
    <string name="submit_order">Submit Order</string>
    <string name="venuename">Venue</string>
    <string name="order_total">Order Total</string>
    <string name="order_summary">Order Summary</string>
    <string name="trans_id">Transaction Id</string>
    <string name="payment_success">Your transaction is successful. Your transaction is </string>
    <string name="payment_success_header">Payment successfull</string>
    <string name="txt_order_status">Order status</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_no_internet">Internet Connection Error!</string>
    <string name="msg_no_internet">Please connect to working Internet connection.</string>
    <string name="title_activity_maps">Map</string>
    <string name="remeber_me">Remember Me</string>
    <string name="cnfrm_password">Confirm Password</string>
    <string name="please_enter_cnfrm_pwd">Please Confirm Password</string>
    <string name="pwd_mismatch">Password Doesn\'t Match</string>
    <string name="create">Create</string>
    <string name="parkforu">PARKFORU</string>
    <string name="airline">Airline</string>
    <string name="from">From</string>
    <string name="status">Status</string>
    <string name="flight">Flight #</string>
    <string name="terms">Term</string>
    <string name="arrival_flight_lbl">Arrival FLight</string>
    <string name="destination_flight_lbl">Destination FLight</string>
    <string name="origin_lbl">Origin</string>
    <string name="destination_lbl">Destination</string>
    <string name="arrival_time_lbl">Arrival Time</string>
    <string name="departure_time_lbl">Departure Time</string>
    <string name="flight_name_lbl">Flight Name</string>
    <string name="flight_number_lbl">Flight Number</string>
    <string name="vehicle_make_lbl">Vehicle Make</string>
    <string name="vehicle_color_lbl">Vehicle Color</string>
    <string name="vehicle_model_lbl">Vehicle Model</string>
    <string name="vehicle_plate_number_lbl">Vehicle Plate Number</string>
</resources>