<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_home"
            android:checked="true"
            android:icon="@drawable/side_menu_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_item_current_booking"
            android:icon="@drawable/side_menu_booking_history"
            android:title="@string/current_booking" />

        <item
            android:id="@+id/nav_item_boooking_history"
            android:icon="@drawable/side_menu_booking_history"
            android:title="@string/booking_history" />

        <item
            android:id="@+id/nav_item_order_discount"
            android:icon="@drawable/side_menu_discount"
            android:title="@string/order_discount" />
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/side_menu_info"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_item_notifications"
            android:checked="true"
            android:icon="@drawable/side_menu_notification"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_item_logout"
            android:checked="true"
            android:icon="@drawable/side_menu_logout"
            android:title="@string/logout" />


    </group>

</menu>