<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_my_jobs"
            android:checked="true"
            android:icon="@drawable/side_menu_home"
            android:title="@string/my_jobs" />

        <item
            android:id="@+id/nav_item_current_job"
            android:icon="@drawable/side_menu_booking_history"
            android:title="@string/current_job" />

        <item
            android:id="@+id/nav_item_boooking_history"
            android:icon="@drawable/side_menu_booking_history"
            android:title="@string/booking_history" />

        <item
            android:id="@+id/nav_item_notifications"
            android:checked="true"
            android:icon="@drawable/side_menu_notification"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_item_logout"
            android:checked="true"
            android:icon="@drawable/side_menu_logout"
            android:title="@string/logout" />


    </group>

</menu>