<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_20dp">

    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_arrival_flight_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrival_flight_lbl"
        android:textSize="@dimen/text_size_20sp" />



    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_flight_number_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_arrival_flight_lbl"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:singleLine="true"
        android:text="@string/flight_number_lbl"
        android:textSize="@dimen/text_size_16sp" />



    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_flight_name_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_arrival_flight_lbl"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_toRightOf="@id/txt_flight_number_val"
        android:singleLine="true"
        android:text="@string/flight_name_lbl"
        android:textSize="@dimen/text_size_16sp" />



    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_origin_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_flight_name_val"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:text="@string/origin_lbl"
        android:textSize="@dimen/text_size_16sp" />



    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_arrival_time_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_flight_name_val"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_toRightOf="@+id/txt_origin_val"
        android:singleLine="true"
        android:text="@string/arrival_time_lbl"
        android:textSize="@dimen/text_size_16sp" />


    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_destination_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_arrival_time_val"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:text="@string/destination_lbl"
        android:textSize="@dimen/text_size_16sp" />




    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_destination_time_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_arrival_time_val"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_toRightOf="@id/txt_destination_val"
        android:singleLine="true"
        android:text="@string/departure_time_lbl"
        android:textSize="@dimen/text_size_16sp" />

    <!-- destination flight-->

    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_destination_flight_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_destination_time_val"
        android:layout_marginTop="@dimen/margin_10dp"
        android:text="@string/destination_flight_lbl"
        android:textSize="@dimen/text_size_20sp" />



    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_dest_flight_number_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_destination_flight_lbl"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:singleLine="true"
        android:text="@string/flight_number_lbl"
        android:textSize="@dimen/text_size_16sp" />




    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_dest_flight_name_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_destination_flight_lbl"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_toRightOf="@id/txt_dest_flight_number_val"
        android:singleLine="true"
        android:text="@string/flight_name_lbl"
        android:textSize="@dimen/text_size_16sp" />


    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_dest_origin_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dest_flight_name_val"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:text="@string/origin_lbl"
        android:textSize="@dimen/text_size_16sp" />



    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_dest_arrival_time_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dest_flight_name_val"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_toRightOf="@+id/txt_dest_origin_val"
        android:singleLine="true"
        android:text="@string/arrival_time_lbl"
        android:textSize="@dimen/text_size_16sp" />


    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_dest_destination_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dest_arrival_time_val"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:text="@string/destination_lbl"
        android:textSize="@dimen/text_size_16sp" />




    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_dest_destination_time_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dest_arrival_time_val"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_toRightOf="@id/txt_dest_destination_val"
        android:singleLine="true"
        android:text="@string/departure_time_lbl"
        android:textSize="@dimen/text_size_16sp" />

</RelativeLayout>