<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_20dp">

    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_vehicle_make_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_make_lbl"
        android:textSize="@dimen/text_size_16sp" />

    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_vehicle_make_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_toRightOf="@id/txt_vehicle_make_lbl"
        android:singleLine="true"
        android:text="@string/vehicle_make_lbl"
        android:textSize="@dimen/text_size_16sp" />

    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_vehicle_color_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vehicle_make_lbl"
        android:singleLine="true"
        android:text="@string/vehicle_color_lbl"
        android:textSize="@dimen/text_size_16sp" />

    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_vehicle_color_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vehicle_make_lbl"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_toRightOf="@id/txt_vehicle_color_lbl"
        android:singleLine="true"
        android:text="@string/vehicle_color_lbl"
        android:textSize="@dimen/text_size_16sp" />


    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_vehicle_model_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vehicle_color_lbl"
        android:singleLine="true"
        android:text="@string/vehicle_model_lbl"
        android:textSize="@dimen/text_size_16sp" />

    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_vehicle_model_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vehicle_color_lbl"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_toRightOf="@id/txt_vehicle_model_lbl"
        android:singleLine="true"
        android:text="@string/vehicle_model_lbl"
        android:textSize="@dimen/text_size_16sp" />

    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_vehicle_plate_number_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vehicle_model_lbl"
        android:singleLine="true"
        android:text="@string/vehicle_plate_number_lbl"
        android:textSize="@dimen/text_size_16sp" />

    <app.parking.com.parkingapp.customViews.MyTextViewCustom
        android:id="@+id/txt_vehicle_plate_number_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vehicle_model_lbl"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_toRightOf="@id/txt_vehicle_plate_number_lbl"
        android:singleLine="true"
        android:text="@string/vehicle_plate_number_lbl"
        android:textSize="@dimen/text_size_16sp" />



</RelativeLayout>