<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black">

    <RelativeLayout
        android:id="@+id/details_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/booking_bg_col"
        android:padding="@dimen/margin_20dp">

        <TextView
            android:id="@+id/vehiclePlate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/order_number"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/order_number_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vehiclePlate"
            android:layout_marginTop="3dp"
            android:text="dd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line_height"
            android:layout_below="@+id/order_number_value"
            android:layout_marginTop="@dimen/margin_5dp"
            android:background="@color/dark_grey" />

        <TextView
            android:id="@+id/txt_slot_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/view"
            android:layout_marginTop="@dimen/margin_15dp"
            android:text="@string/slot_number"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/slot_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_below="@+id/txt_slot_number"
            android:layout_marginTop="3dp"
            android:text="dd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal" />

        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line_height"
            android:layout_below="@+id/slot_value"
            android:layout_marginTop="@dimen/margin_5dp"
            android:background="@color/dark_grey" />

        <TextView
            android:id="@+id/txt_creation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/view_2"
            android:layout_marginTop="@dimen/margin_15dp"
            android:text="@string/creation_date"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal" />drop

        <TextView
            android:id="@+id/creationd_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_creation_date"
            android:layout_marginTop="3dp"
            android:text="dd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal" />

        <View
            android:id="@+id/view_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line_height"
            android:layout_below="@+id/creationd_date_value"
            android:layout_marginTop="@dimen/margin_5dp"
            android:background="@color/dark_grey" />


        <TextView
            android:id="@+id/txt_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/view_two"
            android:layout_marginTop="@dimen/margin_15dp"
            android:text="@string/txt_order_status"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/order_status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_order_status"
            android:layout_marginTop="3dp"
            android:text="dd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal" />

    </RelativeLayout>

</RelativeLayout>